--- a/Company.Web/Views/Department/Index.cshtml
+++ b/Company.Web/Views/Department/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Department>
+﻿@model IEnumerable<DepartmentDto>
 @{
     ViewData["Title"] = "Index";
 }
@@ -25,21 +25,7 @@
                     <td>@department.Code</td>
                     <td>@department.Name</td>
                     <td>@department.CreateAt</td>
-                    <td>
-                    <a asp-action="Details" asp-route-id="@department.Id" class="btn btn-warning">
-                        <i class="fas fa-eye"></i>Details
-                        </a>
-                    </td>
-                <td>
-                        <a asp-action="Update" asp-route-id="@department.Id" class="btn btn-success">
-                        <i class="fas fa-edit"></i>Update
-                    </a>
-                </td>
-                <td>
-                        <a asp-action="Delete" asp-route-id="@department.Id" class="btn btn-danger">
-                        <i class="fas fa-trash"></i>Delete
-                    </a>
-                </td>
+                    <partial name="_ActionButtonsPartialView" model="@department.Id.ToString()" />
 
 
                 </tr>
@@ -55,5 +41,3 @@ else
         <h3>There is No Departments</h3>
     </div>
 }
-
-
