--- a/Company.Web/Views/Employee/Create.cshtml
+++ b/Company.Web/Views/Employee/Create.cshtml
@@ -1,27 +1,35 @@
-﻿@model Employee
+﻿@model EmployeeDto
 @{
     ViewData["Title"] = "Create";
 }
+
+@{
+    var departments = new SelectList(ViewBag.Departments , nameof(Department.Id) , nameof(Department.Name));
+}
+
 <h1>Create New Employee</h1>
 <br />
 <br />
 
-<form asp-action="Create">
+<form asp-action="Create" enctype="multipart/form-data">
     <div class="Form-group">
         <label class="col-form-label" asp-for="Name"></label>
         <input type="text" asp-for="Name" class="form-control" />
 
     </div>
+
     <div class="Form-group">
         <label class="col-form-label" asp-for="Age"></label>
         <input type="number" asp-for="Age" class="form-control" />
 
     </div>
+
     <div class="Form-group">
         <label class="col-form-label" asp-for="Address"></label>
         <input type="text" asp-for="Address" class="form-control" />
 
     </div>
+
     <div class="Form-group">
         <label class="col-form-label" asp-for="Salary"></label>
         <input type="number" asp-for="Salary" class="form-control" />
@@ -32,24 +40,31 @@
         <input type="email" asp-for="Email" class="form-control" />
 
     </div>
+
     <div class="Form-group">
         <label class="col-form-label" asp-for="PhoneNumber"></label>
         <input type="text" asp-for="PhoneNumber" class="form-control" />
 
     </div>
+
     <div class="Form-group">
         <label class="col-form-label" asp-for="HiringDate"></label>
         <input type="date" asp-for="HiringDate" class="form-control" />
 
     </div>
-    <div class="Form-group">
-        <label class="col-form-label" asp-for="DepartmentID"></label>
-        <input type="text" asp-for="DepartmentID" class="form-control" />
 
-    </div>
     <div class="Form-group">
-        <label class="col-form-label" asp-for="ImageURL"></label>
-        <input type="file" asp-for="ImageURL" class="form-control" />
+        <label class="col-form-label" asp-for="Department"></label>
+        <select class="form-control" asp-items="@departments" asp-for="DepartmentID">
+            <option value="@null">--Select Department </option>
+
+        </select>
+    </div>
+
+    <div class="Form-group">
+        <label class="col-form-label" asp-for="Image">Image</label>
+        <br />
+        <input type="file" class="form-control-file" asp-for="Image" />
 
     </div>
 
