--- a/Company.Web/Views/_ViewImports.cshtml
+++ b/Company.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using Company.Data.Entities
 @using Company.Web
 @using Company.Web.Models
+@using Company.Services.Dto
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
