--- a/Company.Web/Views/Account/SignUp.cshtml
+++ b/Company.Web/Views/Account/SignUp.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model SignUpViewModel
 @{
     ViewData["Title"] = "SignUp";
     Layout = "~/Views/Shared/_AuthLayout.cshtml";
@@ -6,7 +6,45 @@
 
 <h1>SignUp</h1>
 
-<form class="login100-form validate-form">
+<form asp-action="SignUp" method="post">
+	<div asp-validation-summary="All"></div>
+
+	<input type="text" asp-for="FirstName" placeholder="FirstName" class="form-control" />
+	<span asp-validation-for="FirstName"></span>
+	<br />
+
+	<input type="text" asp-for="LastName" placeholder="LastName" class="form-control" />
+	<span asp-validation-for="LastName"></span>
+	<br />
+
+	<input type="text" asp-for="Email" placeholder="Email" class="form-control" />
+	<span asp-validation-for="Email"></span>
+	<br />
+
+	<input type="password" asp-for="Password" placeholder="Password" class="form-control" />
+	<span asp-validation-for="Password"></span>
+	<br />
+
+	<input type="password" asp-for="ConfirmPassword" placeholder="ConfirmPassword" class="form-control" />
+	<span asp-validation-for="ConfirmPassword"></span>
+	<br />
+
+	<div class="wthree_text">
+		<label class="anim">
+			<input type="checkbox" required/>
+			<span>I Agree To The Terms & Conditions</span>
+		</label>
+		<div class="clear"> </div>
+	</div>
+	<input type="submit" value="SignUp" class="btn btn-primary" />
+</form>
+<p class="text-black">Do you have an Account?<a asp-action="Login">Login Now</a> </p>
+
+
+
+
+
+@* <form class="login100-form validate-form">
 	<span class="login100-form-logo">
 		<i class="zmdi zmdi-landscape"></i>
 	</span>
@@ -14,7 +52,7 @@
 	<span class="login100-form-title p-b-34 p-t-27">
 		Log in
 	</span>
-
+	 
 	<div class="wrap-input100 validate-input" data-validate="Enter username">
 		<input class="input100" type="text" name="username" placeholder="Username">
 		<span class="focus-input100" data-placeholder="&#xf207;"></span>
@@ -43,4 +81,4 @@
 			Forgot Password?
 		</a>
 	</div>
-</form>
+</form> *@
