--- a/Company.Web/Views/_ViewImports.cshtml
+++ b/Company.Web/Views/_ViewImports.cshtml
@@ -2,5 +2,7 @@
 @using Company.Web
 @using Company.Web.Models
 @using Company.Services.Dto
+@using Microsoft.AspNetCore.Identity
+
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
